# example-servant-persistent

./: .gitignore  README.md  example-servant-persistent.cabal
src/: Api.hs  App.hs  Models.hs
src/Api/: Docs.hs  Json.hs  StaticFiles.hs
static/: index.html
test/: AppSpec.hs
