name:                example-servant-persistent
version:             0.1.0.0
synopsis:            example with persistent and servant
description:         Simple example to illustrate how to use persistent and servant in combination.
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II, Sönke Hahn
maintainer:          mchaver@gmail.com, SoenkeHahn@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable example-servant-persistent
  main-is:             Main.hs
  other-modules:       Api
                     , App
                     , Models
                     , Api.Json
                     , Api.Docs
                     , Api.StaticFiles
  build-depends:       base >=4.8 && <4.9
                     , aeson
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , http-types
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , servant
                     , servant-docs
                     , servant-server
                     , servant-blaze
                     , string-conversions
                     , text
                     , transformers
                     , wai
                     , warp
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:      test
                     , src
  other-modules:       Api
                     , App
                     , Models
                     , AppSpec
                     , Api.Json
                     , Api.Docs
                     , Api.StaticFiles
  build-depends:       base >=4.8 && <4.9
                     , hspec
                     , aeson
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , persistent
                     , monad-logger
                     , persistent-template
                     , persistent-sqlite
                     , transformers
                     , wai
                     , servant
                     , servant-blaze
                     , servant-client
                     , servant-docs
                     , servant-server
                     , string-conversions
                     , warp
                     , http-client
                     , http-types
                     , text
                     , mockery
                     , unordered-containers
  default-language:    Haskell2010
